--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,16 @@
 .social-icon {
   margin: 0.25rem;
+  padding: 1em;
 }
 
 #footer {
   text-align: center;
+  padding: 3em;
+  margin-top: 1em;
+}
+
+hr {
+  width: 50%;
+  margin: 0.5em 25% 0.5em 25%;
+  margin-bottom: 3em;
 }
