--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,8 @@
 // @import "avatar";
 @import "navbar";
 @import "footer";
+@import "embed";
+@import "contact";
 // @import "button";
 // @import "card";
 // @import "card_grid";
