--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,1 +1,26 @@
-<h1>Contact me !</h1>
+<div class="container">
+  <%# Title Section %>
+  <div class= "title">
+    <h2>contact</h2>
+  </div>
+
+    <%# Container of Image & Text DIV/Elements %>
+    <div class="container imageText">
+    <div class="row layout">
+      <div class="col-6 imageLayout">
+        <img class="contactImage" src="https://yt3.ggpht.com/ytc/AKedOLSgl_FSIsEDxJ5r1tPjNe8OfOf35Iyzv_O5pDgAQg=s900-c-k-c0x00ffffff-no-rj" alt="Picture of Sybren Planting" >
+      </div>
+        <%# Contact Section (select txt wish to edit and edit -ONLY WHITE TEXT) %>
+      <div class="col-6 contactText">
+        <div class="textBox">
+          <h5>Sybren Planting</h5>
+          <h5>RIBESSTRAAT 69H</h5>
+          <h5>1032 JS, AMSTERDAM</h5>
+          <h5>+3169696966</h5>
+          <h5>sybrenplanting@mail.com</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
