--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,36 @@
-<div>
-  <h1>Photos etc here </h1>
+<div class="container">
+
+  <%# Video containers - replace only section inside div called embedVid --> iframe with link from  %>
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/684403360?h=cd6aa00625" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/575360988?h=121b5ccfa8" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/672692031?h=c4f72194d3" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/656717601?h=809a4b4fb6" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/448605431?h=f3d5013a3a" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/450078474?h=bb6fb23d32" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/473858570?h=41942112cd" width="1152" height="648" frameborder="0"  allowfullscreen></iframe>
+  </div>
+
+  <div class="embedVid">
+      <%# To replace embeded video copy/paste section between <iframe .....<></iframe> and add: width="1152" height="648" like other links %>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/604848994?h=e5c5caefa0" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
