--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,10 +1,13 @@
-  <footer class="white-section" id="footer">
+  <div class="footerContainer">
+    <footer class="white-section" id="footer">
+      <hr>
 
-      <i class="social-icon fa fa-instagram fa-6" aria-hidden="true"></i>
-      <i class="social-icon fa fa-facebook-official fa-6" aria-hidden="true"></i>
-      <i class="social-icon fa fa-twitter fa-6" aria-hidden="true"></i>
-      <i class="social-icon fa fa-envelope fa-6" aria-hidden="true"></i>
+        <i class="social-icon fa fa-instagram fa-6" aria-hidden="true"></i>
+        <i class="social-icon fa fa-facebook-official fa-6" aria-hidden="true"></i>
+        <i class="social-icon fa fa-twitter fa-6" aria-hidden="true"></i>
+        <i class="social-icon fa fa-envelope fa-6" aria-hidden="true"></i>
 
-      <p>© Copyright 2022 SybrenPLanting </p>
+        <p>© 2022 SybrenPlanting </p>
 
-  </footer>
+    </footer>
+</div>
