--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,22 +1,41 @@
 .navbar {
-  padding: 0 0 4.5rem;
-  color: black;
+  padding-top: 0.8em;
+  padding-bottom: 0.5rem;
   a {
     color: black;
+    text-decoration: none;
+  }
+  a:hover {
+    color:black;
   }
 }
 
+
 .navbar-brand {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-family: 'Smooch Sans', sans-serif;
+  font-size: 1.3rem;
+  font-weight: normal;
+  margin-left: 2em;
 }
 
 .nav-item {
-  padding:0 1.125rem;
+  padding:1rem;
+  a {
+    color: grey;
+    font-family: 'Smooch Sans', sans-serif;
+    font-weight: lighter;
+  }
 }
 
 .nav-link {
-  font-family: 'Montserrat-light';
-  font-size: 1.2rem;
+  a{
+    color: lightgray;
+    font-family: 'Smooch Sans', sans-serif;
+    font-weight: lighter;
+  }
+
+}
+
+.navbar-toggler {
+  color: black;
 }
