contact / nav touches

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,7 +14,7 @@
 .navbar-brand {
   font-family: 'Smooch Sans', sans-serif;
   font-size: 1.3rem;
-  font-weight: normal;
+  font-weight: lighter;
   margin-left: 2em;
 }
 
