--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -12,6 +12,7 @@
   text-align: center;
   justify-content: center;
   font-family: 'Smooch Sans', sans-serif;
+  padding: 2.5rem;
   h2 {
     font-size: 1.5rem;
     font-weight: 200;
