--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg">
      <div class="container">
-      <a class="navbar-brand " href="/">Sybren Planting</a>
+      <a class="navbar-brand titleLink" href="/">Sybren Planting</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
             <li class="nav-item">
               <%= link_to "work", root_path %>
             </li>
