--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -4,10 +4,10 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
-            <li class="nav-item">
+            <li class="nav-item <%= 'active' if current_page?(root_path) %>">
               <%= link_to "work", root_path %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item <%= 'active' if current_page?(contact_path) %>">
               <%= link_to "contact", contact_path %>
             </li>
          </ul>
