--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -2,10 +2,8 @@
     <footer class="white-section" id="footer">
       <hr>
 
-        <i class="social-icon fa fa-instagram fa-6" aria-hidden="true"></i>
-        <i class="social-icon fa fa-facebook-official fa-6" aria-hidden="true"></i>
-        <i class="social-icon fa fa-twitter fa-6" aria-hidden="true"></i>
-        <i class="social-icon fa fa-envelope fa-6" aria-hidden="true"></i>
+        <a class="social-icon" href="https://www.instagram.com/sybrenplanting/?hl=en"><i class="social-icon fa fa-instagram fa-5" aria-hidden="true"></i></a>
+        <a class="social-icon" href="https://www.gmail.com"><i class="social-icon fa fa-envelope fa-5" aria-hidden="true"></i></a>
 
         <p>© 2022 SybrenPlanting </p>
 
