--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -12,6 +12,6 @@
 }
 
 // Media breakpoints (screen resizing everything below 1200 (small laptop) will recieve settings
-@media (max-width: 1200px) {
+// @media (max-width: 1200px) {
 
-}
+// }
