--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,9 +9,10 @@
   color: black;
   text-decoration: none;
   font-family: 'Smooch Sans', sans-serif;
-  font-size: 1.3rem;
-  font-weight: lighter;
+  font-size: 1.6rem;
+  font-weight: bold;
   margin-left: 2em;
+  letter-spacing: 0.2rem;
   &:hover {
     color:rgb(48, 25, 52);
   }
@@ -24,6 +25,7 @@
     font-family: 'Smooch Sans', sans-serif;
     font-weight: lighter;
     text-decoration: none;
+    font-size: 1.2rem;
   }
   a:hover {
     color: black;
