--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,7 @@
   margin-top: 1em;
   font-family: 'Smooch Sans', sans-serif;
   font-weight: 100;
-  font-size: small;
+  font-size: 1.1rem;
 }
 
 hr {
