--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -14,17 +14,19 @@
   font-family: 'Smooch Sans', sans-serif;
   padding: 2.5rem;
   h2 {
-    font-size: 1.5rem;
-    font-weight: 200;
+    font-size: 1.7rem;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
   }
 }
 
 // Styling + font + position of contact text ( email, address )
 .contactText {
   h5 {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     font-weight: 200;
     line-height: 1.7rem;
+    letter-spacing: 0.2rem;
   }
 }
 
