--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -53,7 +53,7 @@
 // All devices up to a width of 575 px = Most mobile Phones
 @media (max-width: 575.98px) {
   .contactText h5 {
-    font-size: 0.7rem;
+    font-size: 1rem;
   }
   .contactImage {
     width: 110%;
@@ -77,6 +77,11 @@
   .footerContainer {
     margin-top: 10rem;
   }
+  .title, h2 {
+      font-size: 1.7rem;
+      font-weight: bold;
+      letter-spacing: 0.2rem;
+    }
 }
 
 // Sets image to be stuck close to contact-text on screens larger than 1300px (most laptops)
