--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -52,9 +52,6 @@
 // Media Breakpoints (when screen is resized ie. for Iphone / Samsung, tablets etc (smaller/larger)
 // All devices up to a width of 575 px = Most mobile Phones
 @media (max-width: 575.98px) {
-  .contactText h5 {
-    font-size: 1rem;
-  }
   .contactImage {
     width: 110%;
     height: 110%;
@@ -72,7 +69,9 @@
     justify-content:end;
   }
   .contactText h5 {
-    font-size: 0.9rem;
+    font-size: 1rem;
+    letter-spacing: 0.23rem;
+    font-weight: bolder;
   }
   .footerContainer {
     margin-top: 10rem;
