push media contact page / navbar

--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -78,7 +78,7 @@
   }
   .title, h2 {
       font-size: 1.7rem;
-      font-weight: bold;
+      font-weight: 200;
       letter-spacing: 0.2rem;
     }
 }
