push media contact page / navbar

--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -59,6 +59,9 @@
   .footerContainer {
     margin-top: 10rem;
   }
+  .contactText, h5 {
+    font-size: 0.7rem;
+  }
 }
 
 // Everything below normal 11-12inch laptop (tablet, big phone etc)
