--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -39,6 +39,10 @@
     padding-top: 0.8em;
     padding-bottom: 0.5rem;
   }
+  .nav-item {
+    padding-right: 0;
+    margin-right: 0;
+  }
 }
 
 // Everything below normal 11-12inch laptop (tablet, big phone etc)
