--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
 
   <%# Video containers - replace only section inside div called embedVid --> iframe with link from  %>
+  <%# To replace embeded video copy/paste section between <iframe .....<></iframe> and add: width="1152" height="648" like other links %>
+  <%# Order First Video At TOP Of Site  %>
+
   <div class="embedVid">
     <iframe src="https://player.vimeo.com/video/684403360?h=cd6aa00625&title=0&byline=0&portrait=0" width="1152" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
@@ -30,7 +33,6 @@
   </div>
 
   <div class="embedVid">
-      <%# To replace embeded video copy/paste section between <iframe .....<></iframe> and add: width="1152" height="648" like other links %>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/604848994?h=e5c5caefa0&byline=0&portrait=0" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
