--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,11 @@
 
   <body>
       <%= render 'layouts/shared/navbar' %>
+
+      <div class="bodyDiv">
       <%= yield %>
+      </div>
+
       <%= render 'layouts/shared/footer' %>
   </body>
 </html>
