--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -3,6 +3,10 @@
   align-items: center;
   justify-content: center;
   padding: 0.2em;
+  iframe {
+    width:1152;
+    height:648;
+  }
 }
 
 #embed {
@@ -12,6 +16,10 @@
 }
 
 // Media breakpoints (screen resizing everything below 1200 (small laptop) will recieve settings
-// @media (max-width: 1200px) {
-
-// }
+ @media (max-width: 600px) {
+  iframe {
+    height: 936.88px;
+    width: 527px;
+    padding-bottom: 1rem;
+  }
+ }
