--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,38 @@
 <div class="container">
 
   <%# Video containers - replace only section inside div called embedVid --> iframe with link from  %>
-  <%# To replace embeded video copy/paste section between <iframe .....<></iframe> and add: width="1152" height="648" like other links %>
+  <%# To replace embeded video copy/paste section between <iframe .....<></iframe> %>
   <%# Order First Video At TOP Of Site  %>
 
   <div class="embedVid">
-    <iframe src="https://player.vimeo.com/video/684403360?h=cd6aa00625&title=0&byline=0&portrait=0" width="1152" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/684403360?h=cd6aa00625&title=0&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe src="https://player.vimeo.com/video/575360988?h=121b5ccfa8&byline=0&portrait=0" width="1152" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/575360988?h=121b5ccfa8&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe src="https://player.vimeo.com/video/672692031?h=c4f72194d3&byline=0" width="1152" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/672692031?h=c4f72194d3&byline=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe src="https://player.vimeo.com/video/656717601?h=809a4b4fb6&title=0&byline=0" width="1152" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/656717601?h=809a4b4fb6&title=0&byline=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe src="https://player.vimeo.com/video/448605431?h=f3d5013a3a&byline=0&portrait=0" width="1152" height="608" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/448605431?h=f3d5013a3a&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe src="https://player.vimeo.com/video/450078474?h=bb6fb23d32&byline=0&portrait=0" width="1152" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/450078474?h=bb6fb23d32&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/473858570?h=41942112cd&byline=0&portrait=0" width="1152" height="648" frameborder="0"  allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/473858570?h=41942112cd&byline=0&portrait=0" width="1162" height="648" frameborder="0"  allowfullscreen></iframe>
   </div>
 
   <div class="embedVid">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/604848994?h=e5c5caefa0&byline=0&portrait=0" width="1152" height="648" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/604848994?h=e5c5caefa0&byline=0&portrait=0" width="1162" height="648" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
