--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -118,11 +118,11 @@
   .footerContainer {
     margin-top: 10rem;
   }
-  .title, h2 {
-      font-size: 1.7rem;
-      font-weight: 200;
-      letter-spacing: 0.2rem;
-    }
+  // .title, h2 {
+  //     font-size: 1.7rem;
+  //     font-weight: 200;
+  //     letter-spacing: 0.2rem;
+  //   }
 }
 
 // Sets image to be stuck close to contact-text on screens larger than 1300px (most laptops)
