--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -52,7 +52,7 @@
 // small phone screen
 @media (max-width: 400px) {
   .navbar {
-    padding-top: 0.8em;
+    padding-top: 1rem;
     // padding-bottom: 0.5rem;
   }
   .nav-item {
