--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -52,7 +52,7 @@
 // small phone screen
 @media (max-width: 400px) {
   .navbar {
-    padding-top: 1rem;
+    padding-top: 0.8em;
     // padding-bottom: 0.5rem;
   }
   .nav-item {
@@ -60,7 +60,7 @@
     margin-right: 0;
   }
   .nav-item a {
-    font-size: 0.7rem;
+    font-size: 1rem;
     letter-spacing: 0.1rem;
   }
 }
