added tagline - vimeo link footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -18,8 +18,8 @@ hr {
   margin: 0.25rem;
   padding: 0.5em;
   color: #212529;
-  a:hover {
-    color: grey;
+  &:hover {
+    color: lightgray;
   }
 }
 
