--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -3,7 +3,7 @@
       <hr>
 
         <a class="social-icon" href="https://www.instagram.com/sybrenplanting/?hl=en"><i class="social-icon fa fa-instagram fa-5" aria-hidden="true"></i></a>
-        <a class="social-icon" href="https://www.gmail.com"><i class="social-icon fa fa-envelope fa-5" aria-hidden="true"></i></a>
+        <a class="social-icon" href="https://vimeo.com/sybrenplanting"><i class="social-icon fa fa-vimeo fa-5" aria-hidden="true"></i></a>
 
         <p>© 2022 SybrenPlanting </p>
 
