--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand">
      <div class="container">
       <a class="navbar-brand titleLink" href="/">Sybren Planting</a>
+      <a class="tagline">Filmer & Editor</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
