--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,7 +1,14 @@
-<nav class="navbar navbar-expand">
+<nav class="navbar navbar-expand-lg navbar-light">
      <div class="container">
-      <a class="navbar-brand titleLink" href="/">Sybren Planting</a>
-      <a class="tagline">Filmer & Editor</a>
+      <%# <div id="titles"> %>
+        <a class="navbar-brand titleLink titles" href="/">Sybren Planting</a>
+        <a class="tagline ">Filmer & Editor</a>
+      <%# </div> %>
+
+        <%# fix toggle  %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+        </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
@@ -13,5 +20,8 @@
             </li>
          </ul>
       </div>
+
+
+
    </div>
 </nav>
