--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -63,9 +63,15 @@
     padding-right: 0;
     margin-right: 0;
   }
-  // #titles {
-  //   justify-content: space-between;
-  // }
+  #titles {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: revert;
+    text-align: left;
+  }
+  .navbar-toggler {
+    margin-left: 80% !important;
+  }
 }
 
 // small phone screen
@@ -81,6 +87,15 @@
   .nav-item a {
     font-size: 1rem;
     letter-spacing: 0.1rem;
+  }
+  #titles {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: revert;
+    text-align: left;
+    }
+  .navbar-toggler {
+    margin-left: 80% !important;
   }
 }
 
