--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light">
      <div class="container">
-      <%# <div id="titles"> %>
+      <div id="titles">
         <a class="navbar-brand titleLink titles" href="/">Sybren Planting</a>
-        <a class="tagline ">Filmer & Editor</a>
-      <%# </div> %>
+        <a class="tagline titles">Filmer & Editor</a>
+      </div>
 
         <%# fix toggle  %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
