--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -57,7 +57,7 @@
     padding-bottom: 0.5rem;
   }
   .titleLink {
-    font-size: 1.3rem
+    font-size: 1.8rem
   }
   .nav-item {
     padding-right: 0;
@@ -71,6 +71,9 @@
   }
   .navbar-toggler {
     margin-left: 80% !important;
+  }
+  .tagline {
+    font-size: 1.3rem;
   }
 }
 
@@ -96,6 +99,9 @@
     }
   .navbar-toggler {
     margin-left: 80% !important;
+  }
+  .tagline {
+    font-size: 1.2rem;
   }
 }
 
