--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -75,6 +75,9 @@
   .tagline {
     font-size: 1.6rem;
   }
+  .nav-items {
+    display: contents;
+  }
 }
 
 // small phone screen
@@ -102,6 +105,9 @@
   }
   .tagline {
     font-size: 1.3rem;
+  }
+  .nav-items {
+    display: contents;
   }
 }
 
