--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -17,7 +17,7 @@
           <h5>RIBESSTRAAT 69H</h5>
           <h5>1032 JS, AMSTERDAM</h5>
           <h5>+3169696966</h5>
-          <h5>sybrenplanting@mail.com</h5>
+          <h5>info@sybrenplanting.com</h5>
         </div>
       </div>
     </div>
