--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,27 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light">
      <div class="container">
-      <div id="titles">
-        <a class="navbar-brand titleLink titles" href="/">Sybren Planting</a>
-        <a class="tagline titles">Filmer & Editor</a>
-      </div>
+      <%# <div class="row"> %>
+        <div id="titles">
+          <a class="navbar-brand titleLink titles" href="/">Sybren Planting</a>
+          <a class="tagline titles">Filmer & Editor</a>
+        </div>
 
-        <%# fix toggle  %>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-        </button>
+          <%# fix toggle  %>
+          <%# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button> %>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
-            <li class="nav-item">
-              <%= link_to "work", root_path %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "contact", contact_path %>
-            </li>
-         </ul>
-      </div>
-
-
-
+        <div class="nav-items" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
+              <li class="nav-item">
+                <%= link_to "work", root_path %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "contact", contact_path %>
+              </li>
+          </ul>
+        </div>
+      <%# </div> %>
    </div>
 </nav>
