fixed padding embeds still to do nav etc

--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -9,6 +9,9 @@
  @media (max-width: 600px) {
   iframe {
     height: fit-content;
+    // padding-bottom: 1rem;
+  }
+  .embedVid {
     padding-bottom: 1rem;
   }
  }
