--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
      <div class="container">
-        <div id="titles">
+        <div id="titles" class="col-6">
           <a class="navbar-brand titleLink titles" href="/">Sybren Planting</a>
           <a class="tagline titles">Filmer & Editor</a>
         </div>
