--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -15,3 +15,10 @@
     padding-bottom: 1rem;
   }
  }
+
+ @media (max-width: 850px) {
+  iframe {
+    height: 21.875rem;
+    padding: 0.625rem;
+  }
+ }
