--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -16,7 +16,7 @@
   }
  }
 
- @media (max-width: 850px) {
+ @media (min-width:850px) and (max-width:991px) {
   iframe {
     height: 21.875rem;
     padding: 0.625rem;
