--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -17,9 +17,13 @@
  }
 
  // Ipad sizing (size of iframe videos)
- @media only screen and (min-width:850px) and (max-width:991px) {
+ @media (min-width:601px) and (max-width:991px) {
   iframe {
     height: 21.875rem;
     padding: 0.625rem;
   }
+  // .embedVid {
+  //   padding: 0;
+  //   height: 400px;
+  // }
  }
