credit txt resize

--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -48,6 +48,10 @@
   .tiles {
     text-align: center;
   }
+  .credits {
+    letter-spacing: 0.1em;
+    line-height: 1em;
+  }
  }
 
  // Ipad sizing (size of iframe videos)
