routename changes / urls + post favicon add

--- a/app/views/home/bok-2019.html.erb
+++ b/app/views/home/bok-2019.html.erb
@@ -4,12 +4,11 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: TOM VAN DEN BOGAARD</p>
-      <p>AGENCY: MONSTER ENERGY</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
+      <p>CLIENT: ONWIES KNALLEN BMX</p>
+      <p>PRODUCTION COMPANY: SYBREN PLANTING</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
+      <p>EXECUTIVE PRODUCER: SYBREN PLANTING</p>
       <p>PRODUCER: ROCHÉ WONG</p>
       <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
       <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
