--- a/app/views/home/glennc-giving-back.html.erb
+++ b/app/views/home/glennc-giving-back.html.erb
@@ -4,8 +4,8 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: GROLSCH</p>
-      <p>AGENCY: DAWN</p>
+      <p>CLIENT: GLENN COLDENHOFF</p>
+      <p>AGENCY: FOX</p>
       <p>PRODUCTION COMPANY: VIGICS</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
