--- a/app/views/home/nalu-lost-frequenties-bts.html.erb
+++ b/app/views/home/nalu-lost-frequenties-bts.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="credits">
       <p>CLIENT: NALU</p>
-      <p>AGENCY: DAWN</p>
+      <p>AGENCY: BTS</p>
       <p>PRODUCTION COMPANY: NALUINC</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
