--- a/app/views/home/opdruq.html.erb
+++ b/app/views/home/opdruq.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: GROLSCH</p>
+      <p>CLIENT: OPDRUQ</p>
       <p>AGENCY: DAWN</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
+      <p>PRODUCTION COMPANY: YCCINC</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
       <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
