--- a/app/views/home/vink-kunststoffen.html.erb
+++ b/app/views/home/vink-kunststoffen.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="credits">
       <p>CLIENT: VINK KUNSTSTOFFEN</p>
-      <p>AGENCY: DAWN</p>
+      <p>AGENCY: CLOTHESINC</p>
       <p>PRODUCTION COMPANY: VIGICS</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
