--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
      <div class="container">
         <div id="titles" class="col-6">
           <a class="navbar-brand titleLink titles" href="/">Sybren Planting</a>
-          <a class="tagline titles">Filmer & Editor</a>
+          <a class="tagline titles" href="/">Filmer & Editor</a>
         </div>
 
           <%# fix toggle  %>
