--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: GROLSCH</p>
-      <p>AGENCY: DAWN</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
+      <p>CLIENT: TOM VAN DEN BOGAARD</p>
+      <p>AGENCY: MONSTER ENERGY</p>
+      <p>PRODUCTION COMPANY: SYBREN PLANTING</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
       <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
